Fix unsdo logo and z-index correction on .unclaimed-rewards-info-container, .reward-tokens-info-container, .total-staked-info-container, .total-staked-info-container, .rewards-per-day-info-container, .apr-info-container {

--- a/src/global.css
+++ b/src/global.css
@@ -1560,6 +1560,7 @@ h2.nft-name {
   align-content: space-around;
   margin: 10px 40px;
   padding: 0 9px;
+  z-index: 1;
 }
 
 
